Include main.py, licence, and readme in build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
               run: |
                   cp plugin.json ./dist/
                   cp package.json ./dist/
+                  cp main.py ./dist/
+                  cp LICENCE ./dist/
+                  cp README.md ./dist/
                   mkdir ./dist/dist
                   mv ./dist/index.js ./dist/dist/
 
