build from root

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,8 @@ jobs:
             - name: Build plugin
               run: |
 
+                cd $GITHUB_WORKSPACE
+
                 decky plugin build -b -o /tmp/output -s directory isthereanydeal-for-deck
                 
                 sudo chown -R $(whoami) isthereanydeal-for-deck
