fix build output

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
               with:
                   name: isthereanydeal-for-deck
                   path: |
-                      ./tmp/output/*
+                      /tmp/output
     release:
         needs: build
         if: startsWith(github.ref, 'refs/tags/v')
