--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: holo-docker
         steps:
             - uses: actions/checkout@v3
 
