--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,13 +39,18 @@ jobs:
               run: |
 
                 decky plugin build -b -o /tmp/output -s directory $GITHUB_WORKSPACE
+
+            - name: Unzip plugin
+              run: |
+                  mkdir /tmp/artifacts -p
+                  unzip /tmp/output/IsThereAnyDeal-DeckyPlugin.zip -d /tmp/artifacts
             
             - name: Upload package
               uses: actions/upload-artifact@v2
               with:
                   name: isthereanydeal-for-deck
                   path: |
-                      /tmp/output/IsThereAnyDeal-DeckyPlugin.zip
+                      /tmp/artifacts/IsThereAnyDeal-DeckyPlugin
     release:
         needs: build
         if: startsWith(github.ref, 'refs/tags/v')
