--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,9 +40,10 @@ jobs:
               run: |
                   mkdir /tmp/artifacts -p
                   unzip /tmp/output/IsThereAnyDeal-DeckyPlugin.zip -d /tmp/artifacts
-            
+                  mv /tmp/artifacts/IsThereAnyDeal-DeckyPlugin "/tmp/artifacts/IsThereAnyDeal for Deck"
+
             - name: Upload package
               uses: actions/upload-artifact@v4
               with:
                   name: isthereanydeal-for-deck
-                  path: /tmp/artifacts/IsThereAnyDeal-DeckyPlugin
+                  path: /tmp/artifacts/IsThereAnyDeal for Deck
