--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,4 +46,4 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                   name: isthereanydeal-for-deck
-                  path: /tmp/artifacts/IsThereAnyDeal for Deck
+                  path: /tmp/artifacts/*
