feat: Added Github link to QAM menu

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "decky-frontend-lib": "^3.25.0",
+    "qrcode.react": "^4.2.0",
     "react-icons": "^4.4.0"
   },
   "pnpm": {
